--- a/react/src/App.css
+++ b/react/src/App.css
@@ -1,36 +1,91 @@
+
+@media (max-width: 768px) {
+  .recent-items {
+      display: none;
+  }
+}
+
+@font-face {
+  font-family: "Nanumsquare";
+  font-weight: normal;
+  src:
+    url("./fonts/NanumSquareR.otf") format("opentype"),
+    url("./fonts/NanumSquareR.woff") format("woff"),
+    url("./fonts/NanumSquareR.ttf") format("truetype");
+
+  /* 사용할 폰트의 기본 스타일 */
+  font-weight: 400;
+  font-style: normal;
+}
+
+body {
+  font-family: "Nanumsquare";
+}
+
+/* Default styles for larger screens */
+.carousel-img {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+}
+
+/* Styles for mobile devices */
+@media (max-width: 768px) {
+  .carousel-img {
+    height: 300px;
+  }
+}
+
+@media (max-width: 480px) {
+  .carousel-img {
+    height: 200px;
+  }
+}
+
+
 .login-InputWrapPhone {
   display: flex;
-  justify-content: space-between; /* 필드 간의 공간을 균등하게 배분 */
+  justify-content: space-between;
+  /* 필드 간의 공간을 균등하게 배분 */
   border-radius: 8px;
-  padding: 10px; /* padding 조정 */
+  padding: 10px;
+  /* padding 조정 */
   background-color: white;
   border: 1px solid #e2e0e0;
 }
 
 .login-InputPhone {
-  flex: 1; /* 필드가 컨테이너 공간을 균등하게 차지하도록 함 */
-  margin: 0 5px; /* 좌우 마진 추가 */
+  flex: 1;
+  /* 필드가 컨테이너 공간을 균등하게 차지하도록 함 */
+  margin: 0 5px;
+  /* 좌우 마진 추가 */
   outline: none;
-  border: 1px solid #ced4da; /* 입력 필드 테두리 색상 조정 */
-  padding: 5px; /* 입력 필드 내부 패딩 조정 */
+  border: 1px solid #ced4da;
+  /* 입력 필드 테두리 색상 조정 */
+  padding: 5px;
+  /* 입력 필드 내부 패딩 조정 */
   font-size: 14px;
   font-weight: 400;
-  text-align: center; /* 텍스트를 가운데 정렬 */
+  text-align: center;
+  /* 텍스트를 가운데 정렬 */
 }
 
 /* 첫 번째 입력 필드에만 적용 */
 .login-InputPhone:first-child {
-  margin-left: 0; /* 첫 번째 필드의 왼쪽 마진 제거 */
+  margin-left: 0;
+  /* 첫 번째 필드의 왼쪽 마진 제거 */
 }
 
 /* 마지막 입력 필드에만 적용 */
 .login-InputPhone:last-child {
-  margin-right: 0; /* 마지막 필드의 오른쪽 마진 제거 */
+  margin-right: 0;
+  /* 마지막 필드의 오른쪽 마진 제거 */
 }
 
 .login-InputWrapPhone:focus-within {
-  border: 1px solid #9e30f4;
+  border: 1px solid #000000;
 }
+
 .login-InputPhone::placeholder {
   color: #dadada;
 }
@@ -52,8 +107,9 @@
 
 .search-input {
   background-color: transparent;
-  border: 1px solid #ced4da; 
+  border: 1px solid #ced4da;
 }
+
 /* 
 .search-button {
   background-color: transparent;
@@ -63,13 +119,17 @@
 
 .search-button {
   background-color: transparent;
-  color: #000; /* 흰색이 아니라 검은색으로 설정 */
-  border: 1px solid #000; /* 테두리 색상을 검은색으로 설정 */
+  color: #000;
+  /* 흰색이 아니라 검은색으로 설정 */
+  border: 1px solid #000;
+  /* 테두리 색상을 검은색으로 설정 */
 }
 
 .search-button:hover {
-  background-color: #000; /* 마우스를 올렸을 때 배경 색상을 검은색으로 변경 */
-  color: #fff; /* 마우스를 올렸을 때 글자 색상을 흰색으로 변경 */
+  background-color: #000;
+  /* 마우스를 올렸을 때 배경 색상을 검은색으로 변경 */
+  color: #fff;
+  /* 마우스를 올렸을 때 글자 색상을 흰색으로 변경 */
 }
 
 .login-ContentWrap {
@@ -117,22 +177,27 @@
 } */
 .address-container {
   display: flex;
-  align-items: center; /* 세로 중앙 정렬 */
-  width: 100%; /* 필요에 따라 조정할 수 있습니다 */
+  align-items: center;
+  /* 세로 중앙 정렬 */
+  width: 100%;
+  /* 필요에 따라 조정할 수 있습니다 */
 }
 
 .login-InputWrapAddr {
-  flex: 0 0 80%; /* flex-grow, flex-shrink, flex-basis를 사용하여 너비를 80%로 고정 */
+  flex: 0 0 80%;
+  /* flex-grow, flex-shrink, flex-basis를 사용하여 너비를 80%로 고정 */
   border-radius: 8px;
   padding: 16px;
   margin-top: 8px;
   background-color: white;
   border: 1px solid #e2e0e0;
-  margin-right: 1%; /* 오른쪽에 간격 추가 */
+  margin-right: 1%;
+  /* 오른쪽에 간격 추가 */
 }
 
 .login-InputAddr {
-  width: 100%; /* 테두리 내부 전체 너비 사용 */
+  width: 100%;
+  /* 테두리 내부 전체 너비 사용 */
   outline: none;
   border: none;
   height: 17px;
@@ -141,17 +206,19 @@
 }
 
 .address-search-button {
-  flex: 0 0 19%; /* flex-grow, flex-shrink, flex-basis를 사용하여 너비를 20%로 고정 */
-  margin-top: 8px; /* 버튼 상단 여백 추가 (선택적) */
+  flex: 0 0 19%;
+  /* flex-grow, flex-shrink, flex-basis를 사용하여 너비를 20%로 고정 */
+  margin-top: 8px;
+  /* 버튼 상단 여백 추가 (선택적) */
   height: 48px;
 }
 
 .login-InputWrap:focus-within {
-  border: 1px solid #9e30f4;
+  border: 1px solid #000000;
 }
 
 .login-InputWrapAddr:focus-within {
-  border: 1px solid #9e30f4;
+  border: 1px solid #000000;
 }
 
 .login-Input {
@@ -174,7 +241,7 @@
 
 .login-ErrorMessageWrap {
   margin-top: 8px;
-  color : #ef0000;
+  color: #ef0000;
   font-size: 12px;
 }
 
@@ -184,7 +251,7 @@
   height: 40px;
   /* border: none; */
   font-weight: 700;
-  background-color: #9e30f4;
+  background-color: #000000;
   color: white;
   border-radius: 8px;
 }
@@ -194,7 +261,7 @@
   height: 40px;
   border: none;
   font-weight: 700;
-  background-color: #9e30f4;
+  background-color: #000000;
   border-radius: 8px;
 }
 
@@ -221,6 +288,7 @@
 .start {
   opacity: 0;
 }
+
 .end {
   opacity: 1;
   transition: opacity 0.5s;
@@ -267,6 +335,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
